tests/baselines/reference/removeDuplicateDuplicateIdentifierDiagnostic.errors.txt
tests/cases/compiler/removeDuplicateDuplicateIdentifierDiagnostic.ts(2,3): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/removeDuplicateDuplicateIdentifierDiagnostic.ts(6,7): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/compiler/removeDuplicateDuplicateIdentifierDiagnostic.ts (2 errors) ====
    class X {
      foo() {
      ~~~
!!! error TS2300: Duplicate identifier 'foo'.
        return 1;
      }
    
      get foo() {
          ~~~
!!! error TS2300: Duplicate identifier 'foo'.
        return 1;
      }
    }
    